Bug navbar overflow bg

--- a/src/stylesheets/_reset.scss
+++ b/src/stylesheets/_reset.scss
@@ -43,10 +43,6 @@ a {
   right: 0;
   min-height: 56px;
 
-  &.navbar-light {
-
-  }
-
   &.fixed-top {
     position: fixed !important;
   }
