--- a/src/stylesheets/pages/_homepage.scss
+++ b/src/stylesheets/pages/_homepage.scss
@@ -18,10 +18,6 @@
     bottom: 0;
   }
 
-  .navbar.bg-dark {
-    background-color: transparent !important;
-  }
-
   .jumbotron {
     font-family: 'libre_baskerville';
     background-color: transparent;
